2013-02-26  Corinna Vinschen  <vinschen@redhat.com>

	* libc/include/malloc.h (struct mallinfo): Convert type of all members
	to size_t to match all targets.

2013-02-20  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>
	    Joseph S. Myers <joseph@codesourcery.com>

	* libc/include/sys/_types.h (_ssize_t): Define as signed equivalent of
	size_t with GCC.

2012-11-29  Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libc/include/sys/reent.h (__sFILE): Change type of _offset
	from int to _off_t.
	* libc/stdio/ftell.c: Use _ftello_r().
	* libc/stdio/ftello.c: Copy implementation from previous
	_ftell_r().
	* libc/stdio/fseek.c: Use _fseeko_r().
	* libc/stdio/fseeko.c: Copy implementation from previous
	_fseek_r().

2012-11-26  Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libc/include/inttypes.h: Add and use __INTTYPES_EXP().

2012-11-23  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* libm/machine/aarch64/configure.in: Change comment to say libm
	instead of libc.

2012-11-12  Steve Ellcey  <sellcey@mips.com>

	* libc/machine/mips/machine/asm.h: New.
	* libc/machine/mips/machine/regdef.h: Update register definitions
	for different ABI's.

2012-11-11  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* libc/include/sys/time.h: Avoid guarding other than timeval
	declaration with _TIMEVAL_DEFINED.  Move timeval related macros under
	_TIMEVAL_DEFINED control.

2012-11-01  Corinna Vinschen  <vinschen@redhat.com>

	* libc/include/locale.h (NULL): Fetch definition via stddef.h.
	* libc/include/stdio.h (NULL): Ditto.
	* libc/include/stdlib.h (NULL): Ditto.
	* libc/include/string.h (NULL): Ditto.
	* libc/include/wchar.h (NULL): Ditto.
	* libc/include/rpc/types.h (NULL): Ditto.
	* libc/include/time.h (NULL): Ditto.  Include stddef.h earlier.

2012-10-27  Anthony Green  <green@moxielogic.com>

	* libc/machine/moxie/setjmp.S (setjmp): Minor optimization.

2012-10-26  Corinna Vinschen  <vinschen@redhat.com>
